--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,11 @@
 {
   "background_page": "background.html",
   "description": "Edit any image in Pixlr",
+  "icons": {
+    "16": "icons/icon_16.png",
+    "48": "icons/icon_48.png",
+    "128": "icons/icon_128.png"
+  },
   "name": "Edit with Pixlr",
   "permissions": [
     "http://*/*",
